--- a/layouts/default.htm
+++ b/layouts/default.htm
@@ -38,7 +38,7 @@ security = "all"
                     <div class="collapse navbar-collapse navbar-main-collapse">
                         <ul class="nav navbar-nav">
                             <li class="{% if this.page.id == 'account' %}active{% endif %}"><a href="{{ 'account'|page }}">Account</a></li>
-                            <li class="{% if this.page.id == 'forum' %}active{% endif %}"><a href="{{ 'forum'|page }}">Forum</a></li>
+                            <li class="{% if this.page.id == 'forum' %}active{% endif %}"><a href="{{ 'forum'|page }}">Basecamp</a></li>
                         </ul>
                         <ul class="nav navbar-nav navbar-right">
                             {% if user %}
